--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-   <a href="grilled-chicken-marinade.html">Grilled Chicken Marinade</a> 
-   <a href="steak-tartare.html">Steak Tartare</a>
-   <a href="chimichanga.html">Chimichanga</a>
+   <ul>
+      <li><a href="grilled-chicken-marinade.html">Grilled Chicken Marinade</a> </li>        
+      <li><a href="steak-tartare.html">Steak Tartare</a></li>
+      <li><a href="chimichanga.html">Chimichanga</a></li>
+   </ul>
+   
 </body>
 </html>
